--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -33,3 +33,12 @@ mat-icon{
   color: rgb(79, 79, 255);
 }
 
+@media(max-width: 750px){
+  .example-card {
+    max-width: 100%;
+    margin: 5px;
+  }
+  .contenedor{
+    margin: 1rem;
+  }
+}
