--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -9,7 +9,7 @@
     </div>
     <mat-card-subtitle>{{ product?.category}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="{{ product?.image}}" alt="{{ product?.title}}">
+  <img mat-card-image src="{{ product?.image}}" alt="{{ product?.title}}" loading="lazy">
   <mat-card-content>
     <p matTooltip="{{ product?.description}}">
       {{ product?.description}}
