add component contact-page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
     <button mat-flat-button (click)="resetProducts()"
       matTooltip="Remove products from localStorage and bring information from the API ?">Reset Products API</button>
     <button mat-flat-button (click)="addProduct()">Add Product</button>
+    <button mat-button (click)="openDialog()">Contact Page</button>
   </div>
 </main>
 
